@@ -1,3 +1,9 @@
+2006-08-17  Nate Nielsen  <nielsen@memberwebs.com>
+
+    * libseahorse/seahorse-prefs-cache.c:
+    * libseahorse/seahorse-prefs.glade: Better messages when 
+    either SSH agent or GPG agent not in order.
+    
 2006-08-16  Nate Nielsen  <nielsen@memberwebs.com>
 
     * libcryptui/tests/Makefile.am: Link properly so libcryptui
